syntax = "proto3";

package proto;      // 包名
option go_package = '/server';    // 指定生成的go代码所存放的路径，不用提前创建

service DagPool {
  rpc Add (AddRequest) returns (AddReply) {}
  rpc Get (GetRequest) returns (GetReply) {}
  rpc Delete (DeleteRequest) returns (DeleteReply) {}
}
message PoolUser {
  string username = 1;
  string pass = 2;
}
message AddRequest {
  bytes block = 1;
  PoolUser user =2;
}

message AddReply {
  string cid = 1;
}
message GetRequest {
  string cid = 1;
  PoolUser user =2;
}

message GetReply {
  bytes block = 1;
}
message DeleteRequest {
  string cid = 1;
  PoolUser user =2;
}

message DeleteReply {
  string message = 1;
}